🔧 chore: configure prisma and express types
automate prisma client generation after installation and extend the express request interface to support type-safe user authentication. update typescript configuration to include custom type definitions and exclude generated prisma files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,5 +38,5 @@
 		"skipLibCheck": true,
 		"esModuleInterop": true
 	},
-	"include": ["src/**/*", "prisma/**/*"]
+	"include": ["src/**/*", "types"]
 }
